--- a/Web.config
+++ b/Web.config
@@ -7,6 +7,13 @@
 	<connectionStrings>
 		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=true;AttachDBFilename=|DataDirectory|\Database.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="cscim23@gmail.com">
+        <network host="smtp.gmail.com" port="587" userName="cscim23@gmail.com" password="Cscim23IT"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
 	<system.web>
 		<compilation debug="true" strict="false" explicit="true" targetFramework="4.0"/>
 		<authentication mode="Forms">
