--- a/Web.config
+++ b/Web.config
@@ -1,21 +1,36 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<connectionStrings>
+	<appSettings>
+  <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;" />
+ </appSettings>
+ <connectionStrings>
 		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=true;AttachDBFilename=|DataDirectory|\Database.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
-  <system.net>
-    <mailSettings>
-      <smtp deliveryMethod="Network" from="cscim23@gmail.com">
-        <network host="smtp.gmail.com" port="587" userName="cscim23@gmail.com" password="Cscim23IT"/>
-      </smtp>
-    </mailSettings>
-  </system.net>
+	<system.net>
+		<mailSettings>
+			<smtp deliveryMethod="Network" from="cscim23@gmail.com">
+				<network host="smtp.gmail.com" port="587" userName="cscim23@gmail.com" password="Cscim23IT"/>
+			</smtp>
+		</mailSettings>
+	</system.net>
 	<system.web>
-		<compilation debug="true" strict="false" explicit="true" targetFramework="4.0"/>
+		<httpHandlers>
+   <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+    validate="false" />
+  </httpHandlers>
+  <pages>
+   <controls>
+    <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting"
+     assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+   </controls>
+  </pages>
+  <compilation debug="true" strict="false" explicit="true" targetFramework="4.0">
+			<assemblies>
+				<add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></assemblies></compilation>
 		<authentication mode="Forms">
 			<forms loginUrl="~/Account/Login.aspx" timeout="2880"/>
 		</authentication>
@@ -40,6 +55,12 @@
 		</roleManager>
 	</system.web>
 	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="true"/>
-	</system.webServer>
+  <modules runAllManagedModulesForAllRequests="true" />
+  <validation validateIntegratedModeConfiguration="false" />
+  <handlers>
+   <remove name="ChartImageHandler" />
+   <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST"
+    path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+  </handlers>
+ </system.webServer>
 </configuration>
