Paypal payment option in prdDtl

--- a/Web.config
+++ b/Web.config
@@ -6,6 +6,13 @@
 <configuration>
 	<appSettings>
   <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;" />
+    <add key="BusinessEmail" value="mymail@mail.com"/>
+    <add key="CancelPurchaseUrl" value="http://localhost/paypal/default.aspx"/>
+    <add key="ReturnUrl" value="http://localhost/paypal/payment_success.aspx"/>
+    <add key="NotifyUrl" value="http://localhost/paypal/IPNHandler.aspx"/>
+    <add key="CurrencyCode" value="USD"/>
+    <add key="UseSandbox" value="true"/>
+    <add key="SendToReturnURL" value="false"/>
  </appSettings>
  <connectionStrings>
 		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=true;AttachDBFilename=|DataDirectory|\Database.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
